realigns right buttons correctly in mat-tabs

--- a/src/assets/scss/core/_tabs.scss
+++ b/src/assets/scss/core/_tabs.scss
@@ -111,6 +111,7 @@
   border: 0;
   margin: 0;
   min-width: 9em !important;
+  justify-content: end !important;
   border-radius: $border-radius-base;
   line-height: $mdb-btn-font-size-base * 2;
   font-size: $mdb-btn-font-size-base;
